--- a/src/makefile
+++ b/src/makefile
@@ -1,7 +1,15 @@
-OUT=../out/
+INC=include/
 
-build: main.cpp
-	$(CXX) $? -o $(OUT)exec
+build: main.o Object.o
+	$(CXX) $? -o exec -lglfw -lGL
+
+.cpp.o:
+	$(CXX) -c $? -I $(INC) -o $@
+
+Object.o: Object.cpp
+main.o: main.cpp
+
+
 
 
 	
