improved build system
- makefile will soon look for everything itself

--- a/src/objects/makefile
+++ b/src/objects/makefile
@@ -3,15 +3,18 @@ OUT=../../out/objects/
 
 CXXFLAGS = -O0 -g
 
-.PHONY: all dir
+.PHONY: all dirc
 
-all: $(OUT)Sample.o
-	-mkdir $(OUT)
+$(OUT)/Objects.o: $(patsubst %.cpp, $(OUT)%.o, $(wildcard *.cpp))
+	ld -r $? -o $(OUT)/Objects.o
 	
-$(OUT)Sample.o: Sample.cpp
-	-mkdir $(OUT)
+
+	
+$(OUT)%.o: %.cpp
 	$(CXX) -c $? $(INC) -o $@ $(CXXFLAGS)
 
+dirc:
+	-mkdir $(OUT)
 
 	
 
